generate persistentunitcachedir into a temp dir